# enterprise-ai-accelerator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.demo  GOVERNANCE.md  LICENSE  PRICING.md  README.md  ROADMAP.md  SECURITY.md  cloud_config.py  docker-compose.yml  mcp-config-example.json  mcp_server.py  mcp_transports.py  pyproject.toml  requirements.txt  risk_aggregator.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  test.yml
agent_ops/: Dockerfile  __init__.py  agents.py  dashboard.py  demo.py  orchestrator.py  otel_tracer.py  requirements.txt
agent_ops/tests/: test_agent_hardening.py  test_otel_tracer.py
ai_audit_trail/: Dockerfile  Makefile  README.md  __init__.py  api.py  benchmark.py  chain.py  config.py  dashboard.py  decorators.py  demo.py  docker-compose.yml  eu_ai_act.py  incident_manager.py  nist_rmf.py  pyproject.toml  query.py  reporter.py  requirements.txt  web_ui.py
ai_audit_trail/.github/workflows/: ci.yml
ai_audit_trail/integrations/: __init__.py  anthropic_sdk.py  crewai.py  langchain.py  llamaindex.py  openai_sdk.py
ai_audit_trail/sdk_examples/: 01_anthropic_quickstart.py  02_openai_quickstart.py  03_langchain_chain.py  04_llamaindex_rag.py  05_crewai_agents.py  __init__.py
ai_audit_trail/tests/: conftest.py  test_anchor_and_mlbom.py  test_chain.py  test_eu_ai_act.py  test_incident_manager.py  test_integrations.py  test_query.py
app_portfolio/: README.md  __init__.py  analyzer.py  ci_maturity_scorer.py  cli.py  containerization_scorer.py  cve_scanner.py  dependency_scanner.py  language_detector.py  report.py  six_r_scorer.py  test_coverage_scanner.py
auth/: __init__.py  aws_auth.py  azure_auth.py  gcp_auth.py  oci_auth.py
cloud_iq/: Dockerfile  README.md  __init__.py  api.py  cost_analyzer.py  dashboard.py  demo.py  demo_data.py  demo_v2.py  docker-compose.yml  k8s_analyzer.py  ml_detector.py  models.py  nl_query.py  requirements.txt  requirements_v2.txt  scanner.py  terraform_generator.py  terraform_generator_v2.py
cloud_iq/adapters/: README.md  __init__.py  aws.py  azure.py  base.py  gcp.py  kubernetes.py  unified.py
cloud_iq/integrations/: __init__.py  grafana.py  jira.py  pagerduty.py  slack.py
cloud_iq/providers/: __init__.py  aws.py  azure.py  base.py  gcp.py  multi.py  oci.py
cloud_iq/tests/: __init__.py  test_api.py  test_demo_data.py  test_ml_detector.py
cloudiq/: __init__.py  analyzer.py  demo.py
compliance_citations/: __init__.py  evidence.py
core/: README.md  __init__.py  _hooks.py  ai_client.py  api_key_auth.py  batch_coalescer.py  cost_estimator.py  files_api.py  guardrails.py  interleaved_thinking.py  logging.py  model_router.py  models.py  prometheus_exporter.py  result_cache.py  streaming.py  telemetry.py
cost_analyzer/: __init__.py  calculator.py  demo.py
demo/: run_demo.py
docs/: ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  CASE_STUDY.md  COMPARISON.md  COMPLIANCE_FRAMEWORKS.md  DEMO.md  EU_AI_ACT_EVIDENCE_PACK.md  FABLE_5_UPGRADE.md  OPUS_4_7_UPGRADE.md  PLATFORM_ARCHITECTURE.md  QUICKSTART.md  RESUME_TALKING_POINTS.md  SOVEREIGN_DEPLOYMENT.md  USE_CASES.md  architecture.md
evals/: README.md  __init__.py  loader.py  report.py  run.py  scorers.py  thresholds.py
examples/: README.md  finops_demo.py  run_demos.ps1  run_demos.sh  sample_bias_dataset.json  sample_briefing.json  sample_cur.csv  sample_workloads.json
executive_chat/: __init__.py  chat.py
executive_report/: __init__.py  generator.py
finops_intelligence/: Dockerfile  README.md  __init__.py  analytics_engine.py  anomaly_detector.py  anomaly_detector_v2.py  api.py  batch_processor.py  carbon_tracker.py  cli.py  commitment_optimizer.py  cost_tracker.py  cur_ingestor.py  dashboard.py  demo.py  docker-compose.yml  focus_exporter.py  forecaster.py  maturity_assessment.py  nl_interface.py  optimizer.py  reporter.py  requirements.txt  ri_sp_optimizer.py  right_sizer.py  savings_reporter.py  unit_economics.py
iac_security/: README.md  __init__.py  __main__.py  cli.py  drift_detector.py  osv_scanner.py  policies.py  pulumi_parser.py  sarif_exporter.py  sbom_generator.py  scanner.py  terraform_parser.py
integrations/: README.md  __init__.py  base.py  config.py  dispatcher.py  github_app.py  github_issue.py  jira.py  jira_creator.py  pagerduty.py  servicenow.py  slack.py  slack_notifier.py  smtp_email.py  teams.py
migration_scout/: Dockerfile  README.md  __init__.py  api.py  assessor.py  batch_classifier.py  cross_cloud.py  demo.py  dependency_mapper.py  models.py  planner.py  report_generator.py  requirements.txt  runbook_generator.py  tco_calculator.py  thinking_audit.py  wave_planner.py
observability/: README.md  docker-compose.obs.yaml  grafana-datasources.yaml  otel-collector.yaml  prometheus.yml
policy_guard/: Dockerfile  README.md  __init__.py  api.py  bias_detector.py  checker.py  dashboard.py  demo.py  docker-compose.yml  incident_response.py  pyproject.toml  remediation_generator.py  reporter.py  requirements.txt  sarif_exporter.py  scanner.py  thinking_audit.py
policy_guard/.github/workflows/: ci.yml
policy_guard/frameworks/: __init__.py  cis_aws.py  colorado_sb26189.py  dora.py  eu_ai_act.py  fedramp_rev5.py  hipaa.py  iso_42001.py  mapping.py  nist_ai_rmf.py  pci_dss_40.py  soc2.py  texas_traiga.py
policy_guard/sql/: init.sql
policy_guard/tests/: test_api.py  test_frameworks.py  test_hipaa.py  test_new_frameworks.py  test_remediation_generator.py  test_sarif_exporter.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_app_portfolio.py  test_cloud_adapters.py  test_core_ai_client_v05.py  test_core_batch.py  test_core_cache.py  test_core_cost.py  test_core_files.py  test_core_observability.py  test_core_router.py  test_core_streaming.py  test_core_thinking.py  test_cross_cloud.py  test_finops.py  test_frameworks_expanded.py  test_guardrails.py  test_iac_security.py  test_integrations.py  test_mcp_server.py  test_risk_aggregator.py
(+54 files in other folders)
