[build-system]
requires = ["setuptools>=71.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-ai-accelerator"
version = "0.3.0"
description = "AI governance, FinOps, and cloud migration intelligence — EU AI Act Article 12 compliant, SARIF 2.1.0, OpenTelemetry."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Hunter Spence", email = "hunter@vantaweb.io" }
]
requires-python = ">=3.11"
keywords = [
    "eu-ai-act",
    "ai-governance",
    "audit-trail",
    "sarif",
    "opentelemetry",
    "finops",
    "cloud-migration",
    "compliance",
    "policy",
    "risk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    # AI
    "anthropic>=0.40.0",
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    # HTTP client
    "httpx>=0.27.0",
    # Terminal UI
    "rich>=13.7.0",
    # Analytics / ML
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "duckdb>=0.10.3",
    # Cloud SDKs
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    # Kubernetes
    "kubernetes>=29.0.0",
    # Async / observability
    "structlog>=24.1.0",
    "websockets>=12.0",
    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    # Templating
    "jinja2>=3.1.4",
    "python-dateutil>=2.9.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
audit = [
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "streamlit>=1.35.0",
]
finops = [
    "plotly>=5.22.0",
    "matplotlib>=3.9.0",
]
policy = [
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
]
cloud = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "kubernetes>=29.0.0",
]
all = [
    "enterprise-ai-accelerator[audit,finops,policy,cloud]",
]

[project.urls]
Homepage = "https://github.com/HunterSpence/enterprise-ai-accelerator"
Documentation = "https://github.com/HunterSpence/enterprise-ai-accelerator#readme"
"Bug Tracker" = "https://github.com/HunterSpence/enterprise-ai-accelerator/issues"

[project.scripts]
eaa-audit-demo    = "ai_audit_trail.demo:main"
eaa-finops-demo   = "finops_intelligence.demo:main"
eaa-migration-demo = "migration_scout.demo:main"
eaa-policy-demo   = "policy_guard.demo:main"
eaa-cloudiq-demo  = "cloud_iq.demo:run_demo"
eaa-agents-demo   = "agent_ops.demo:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "ai_audit_trail*",
    "finops_intelligence*",
    "migration_scout*",
    "policy_guard*",
    "cloud_iq*",
    "agent_ops*",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"
markers = [
    "network: requires network access (skipped by default)",
]
