[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-audit-trail"
version = "2.0.0"
description = "Tamper-evident AI audit logging with EU AI Act Article 12 + NIST AI RMF compliance"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = [
    "ai-governance", "eu-ai-act", "nist-rmf", "audit-trail",
    "compliance", "merkle-tree", "llm-logging",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]

# Zero mandatory dependencies — core runs on stdlib only
dependencies = []

[project.optional-dependencies]
# SDK integrations — install only what you use
anthropic = ["anthropic>=0.23"]
openai    = ["openai>=1.14"]
langchain = ["langchain>=0.2", "langchain-core>=0.2"]
llamaindex = ["llama-index>=0.10", "llama-index-core>=0.10"]
crewai    = ["crewai>=0.28"]

# REST API (FastAPI)
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "websockets>=12.0",
]

# Web dashboard (Streamlit)
ui = [
    "streamlit>=1.33",
    "plotly>=5.20",
]

# Development + testing
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.9",
    "coverage[toml]>=7.4",
]

# Install everything
all = [
    "ai-audit-trail[anthropic,openai,langchain,llamaindex,crewai,api,ui,dev]",
]

[project.scripts]
ai-audit-trail-demo = "ai_audit_trail.demo:main"
ai-audit-trail-api  = "ai_audit_trail.api:start_server"

[project.urls]
Homepage    = "https://github.com/hunter-spence/ai-audit-trail"
Repository  = "https://github.com/hunter-spence/ai-audit-trail"
Issues      = "https://github.com/hunter-spence/ai-audit-trail/issues"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
addopts      = "-v --tb=short"

[tool.coverage.run]
source  = ["ai_audit_trail"]
omit    = ["*/tests/*", "*/demo.py", "*/benchmark.py"]

[tool.coverage.report]
show_missing = true
fail_under   = 80

[tool.ruff]
target-version = "py312"
line-length    = 100
select = [
    "E", "F", "W",    # pyflakes + pycodestyle
    "I",              # isort
    "UP",             # pyupgrade
    "B",              # bugbear
    "C4",             # comprehensions
    "SIM",            # simplify
]
ignore = ["E501", "B008", "B904"]

[tool.mypy]
python_version = "3.12"
strict         = false
ignore_missing_imports = true
